syntax = "proto3";

package com.test.application.domain.user;

option (type_url_prefix) = "type.com.test.application.domain.user";
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_package = "com.test.application.domain.user.command";
option java_outer_classname = "UserCommandsProto";

import "google/protobuf/timestamp.proto";

import "spine/annotations.proto";
import "spine/validate.proto";
import "spine/users/user_id.proto";
import "spine/time/time.proto";
import "spine/users/user_account.proto";
import "spine/users/tenant.proto";

message CreateUser {
    spine.users.UserId user_id = 1 [(required) = true];
    spine.users.UserAccount user_account = 2 [(required) = true];
    spine.users.Tenant tenant = 3;
    reserved 4 to 30; // for possible future usage.
    // The moment the user account was created.
    google.protobuf.Timestamp when_created = 31;
}

message UpdateUser {
    spine.users.UserId user_id = 1 [(required) = true];
    spine.users.UserAccount user_account = 2;
    spine.users.Tenant tenant = 3;
    reserved 4 to 30; // for possible future usage.
    // The moment the user account was created.
    google.protobuf.Timestamp when_created = 31;
}

message UpdateUserAccountStatus {
    spine.users.UserId user_id = 1 [(required) = true];
    spine.users.UserAccount.Status newStatus = 2 [(required) = true];
    reserved 4 to 30; // for possible future usage.
    // The moment the user account was created.
    google.protobuf.Timestamp when_created = 31;
}

message DeleteUser {
    spine.users.UserId user_id = 1 [(required) = true];
    reserved 2 to 30; // for possible future usage.
    // The moment the user account was created.
    google.protobuf.Timestamp when_created = 31;
}